Fix shortTitles for better program and weird hyphens bug on Safari

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,7 @@
 
 body {
   letter-spacing: 0.05em;
+  hyphenate-character: '-';
 }
 
 .link {
